fdo#76101 [DOCX] Export: Limit no of styles in styles.xml

MS Office has an internal limitation of 4091 styles in styles.xml
and cannot load a .docx with more. However the documentation seems to allow
that. So if there are more styles, don't export those.

MS Office follows the same principle and repairs the corrupt document by
removing extra styles.

Change-Id: I20c8775ee9d697a6613be96eb01283844c1d78f5